Jul 22 2002  2.5    Fixed manuf count bug
Jul 21 2002  2.5    Added IPX dissection
                    Added range calculations to network details
                    Fixed mintor bug in GPS coordinate assignment
                    Minor optimizations to packetracker network creation
Jul 20 2002  2.5    Fixed packetype handling of ARP
                    Fixed packetype panel help
                    Added service string lookup to packetype panel (million)
                    Fixed time display for packetype
                    Added netbios dissector and packet type display
Jul 19 2002  2.5    Added resizeable vectors for strings and packet info in
                     tcpclient
                    Fixed kismet2cwgd to work with XML.
                    Fixed panels client to resize the maximum number of strings
                     stored in tcpclient
                    Added new panel 'p' - Packet type
                    wtapfile fills in time headers correctly
                    Added tcp, udp dissection to packet type
                    Fixed low-level packet dissection
Jul 18 2002  2.5    Made gps waypoint file errors non-fatal
                    Made autoconf changes from Dave Worth to do ethereal
                     detection on BSD correctly
                    Made autoconf changes to automatically look for ethereal
                     0.9.5 in /usr/src
                    Fixed major bug in client send() code
                    Optimized server string and packetype parsing - pointer
                     math is faster than regexp parsing!
Jul 17 2002  2.5    Added on-demand sending of packet types
                    Merged patches from Pedro for OpenBSD
                     Removed pcap nonblocking to fix loss of packets
                     Fixed ifconfig promisc not existing on BSD
                    Fixed stupid error in kismet_hopper on BSD.
Jul 16 2002  2.5    Moved stringdumps to on-demand to reduce server load.