@@ -1,4 +1,6 @@
 Jul 22 2002  2.5    Fixed manuf count bug
+                    Added velocity option for kismet_hopper (-v) to change
+                     the rate of channel skipping.
 Jul 21 2002  2.5    Added IPX dissection
                     Added range calculations to network details
                     Fixed mintor bug in GPS coordinate assignment
